--- a/pesde.toml
+++ b/pesde.toml
@@ -1,9 +1,16 @@
 name = "neond00m/vide_typed"
-version = "0.3.1-test.1"
+version = "0.3.2-test.1"
 description = "vide with types and camel case"
 authors = ["centau"]
 repository = "https://github.com/neond00m/vide"
 license = "MIT"
+
+includes = [
+  "pesde.toml",
+  "README.md",
+  "LICENSE",
+  "src/**",
+]
 
 [target]
 environment = "roblox"
